Tue Nov 10 20:05:27 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_math.h: moved the MAX(a,b) and MIN(a,b) to gsl_math.h and
 	renamed them GSL_MAX(a,b) and GSL_MIN(a,b) to avoid inevitable
 	conflicts with system macros.

Mon Nov  9 21:08:10 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* config.h: added MAX(a,b) and MIN(a,b) macros since we use these
 	everywhere. We assume that if they are defined by the system then
 	they do actually work.

1998-11-06    <bjg@ancho.lanl.gov>

	* configure.in: add -mieee on alpha platforms, also check for both
	scanf and printf working with long double

1998-08-31  James Theiler  <jt@lanl.gov>

	* Makefile.am (SUBDIRS): added utils directory

	* configure.in (AC_OUTPUT): added utils/Makefile 

	* configure.in (AC_REPLACE_FUNCS): added strtol, strtoul; removed
	strerror since it's already hardcoded into the err/ directory

1998-08-30  Mark Galassi  <rosalia@cygnus.com>

	* configure.in: upped release number to 0.4; about to tag and make
	the release.

1998-08-20  Mark Galassi  <rosalia@cygnus.com>

	* configure.in: upped version to 0.4-interim as we prepare for a
	0.4 snapshot.

	* NEWS: now refers to 0.4 instead of 0.3g.  Also "commented out"
	(smile) the note that says "we need to do a better job with the
	news file", since it looks quite good now!

1998-08-19  Mark Galassi  <rosalia@cygnus.com>

	* doc/Makefile.am (EXTRA_DIST): added ran-exppow.tex,
	rand-levy.tex, rand-gumbel.tex and rand-bernoulli.tex to
	EXTRA_DIST.  Now they are included in the distribution and a "make
	distcheck" goes further.

Thu Jul 30 16:12:05 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* Makefile.am: now using a script to write the AR commands
 	explicitly, this should be more portable

Tue Jul 28 23:07:04 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* Makefile.am: new style single build of libgsl.a

Fri Jul 10 19:57:49 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* configure.in: removed AC_FUNC_ALLOCA since we don't use alloca
 	(it is not ansi)
